Bug 460947 - fsync stuff has a wrong query for expiration sites cap r=dietrich